# schottent_totten

./: .gitignore  .plantuml  CMakeLists.txt  README.md  main.cpp
.uml/: Cards.uml  completeUml.puml  game.puml
Board/: Board.h  board.cpp  board.h
Board/Classique Deck/: Deck.cpp  Deck.h
Border/: Boarder.cpp  Boarder.h  Border.cpp  Border.h  border.cpp  border.h
Card/: Card.cpp  Card.h  card.cpp  card.h
Card/Clan/: Clan.cpp  Clan.h
Controler/: Controler.cpp  Controler.h  handle.cpp  handle.h
EventManager/: EventManager.cpp
Game/: Game.cpp  Game.h
MainWindow/: mainwindow.cpp
Model/: EventManager
Model/Board/: Board.h  SchottenTottenBoard.cpp  SchottenTottenBoard.h
Model/Border/: Border.cpp  Border.h
Model/Border/Tile/: Tile.h  (+1 more)
Model/Card/: Card.cpp  Card.h
Model/Combinaison/: Combinaison.cpp  Combinaison.h
Model/Controler/: Controler.cpp  Controler.h
Model/Deck/: Deck.cpp  Deck.h
Model/EventManager/: EventManager.cpp  EventManager.h
Model/Game/: Game.cpp  Game.h
Model/Player/: Player.cpp  Player.h
Player/: Player.cpp  Player.h  player.cpp  player.h
Player/Human/: Human.cpp  Human.h
Utils/: enums.cpp  enums.h
Vue/: Vue.cpp  Vue.h  menu.cpp  menu.h
projet2/: CMakeLists.txt  QT.cpp  boardwindow.cpp  boardwindow.h  boardwindow.ui  fifthwindow.cpp  fifthwindow.h  fifthwindow.ui  fourthwindow.cpp  fourthwindow.h  fourthwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  projet2.pro  pseudojoueur.cpp  pseudojoueur.h  pseudojoueur.ui  secondwindow.cpp  secondwindow.h  secondwindow.ui  thirdwindow.cpp  thirdwindow.h  thirdwindow.ui
(+22 files in other folders)
